-- This is a modified version of the cabal file from ghc.

name:		haskell98
version:	1.0
license:	BSD3
license-file:	LICENSE
maintainer:	libraries@haskell.org
synopsis:	Compatibility with Haskell 98
description:
  This package provides compatibility with the modules of Haskell 98 by
  means of wrappers around modules from the base package.  However Prelude and
  Numeric are provided directly by the base package.

homepage:	http://www.haskell.org/definition/
build-depends:	base
exposed-modules:
	-- Haskell 98 (Prelude and Numeric are in the base package)
	Prelude, Numeric, Array, CPUTime, Char, Complex, Directory, IO, Ix, List, Locale,
	Maybe, Monad, Random, Ratio, System, Time,
