Name: base
Version: 1.0
Extensions: ForeignFunctionInterface
Exposed-Modules: Control.Exception,
                 Control.Monad,
                 Data.Array,
                 Data.Char,
                 Data.Complex,
                 Data.List,
                 Data.Word,
                 Data.Monoid,
                 Data.Bits,
--                 Data.Dynamic,
                 Data.Int,
                 Data.IORef,
                 Data.Ix,
                 Data.Maybe,
--                 Data.IORef,
--                 Data.Typeable,
                 Data.Ratio,
                 Data.Unicode,
                 Foreign,
                 Foreign.C,
                 Foreign.C.Types,
                 Foreign.C.String,
                 Foreign.C.Error,
                 Foreign.ForeignPtr,
                 Foreign.Marshal
                 Foreign.Marshal.Alloc,
                 Foreign.Marshal.Array,
                 Foreign.Marshal.Error,
                 Foreign.Marshal.Pool,
                 Foreign.Marshal.Utils,
                 Foreign.Ptr,
                 Foreign.StablePtr,
                 Foreign.Storable,
                 Jhc.Addr,
                 Jhc.Basics,
                 Jhc.Float
--                 Jhc.Array,
                 Jhc.Handle,
                 Jhc.Hole,
                 Jhc.IO,
--                 Jhc.Inspection,
                 Jhc.JumpPoint,
                 Jhc.Tuples,
                 Numeric,
                 Prelude.Float,
                 Prelude.IO,
                 Prelude.IOError,
                 Prelude.Ratio,
                 Prelude.Text,
                 Prelude,
                 System.Console.GetOpt,
                 System.CPUTime,
                 System.Directory,
                 System.Info,
                 System.IO,
--                 System.IO.Error,
                 System.IO.Unsafe,
                 System.IO.Binary,
                 System.Locale,
                 System.Random,
                 System.Time,
                 System
                 Text.Show.Functions

