name:		QuickCheck
version:	1.2.0.0
license:	BSD3
license-file:	LICENSE
options:   -fcpp
author:		Koen Classen and John Hughes
maintainer:	libraries@haskell.org
category:	Testing
homepage:	http://www.math.chalmers.se/~rjmh/QuickCheck/
synopsis:	Automatic testing of Haskell programs
description:
	A library for testing Haskell programs automatically.
	The programmer provides a specification of the program, in
	the form of properties which functions should satisfy, and
	QuickCheck then tests that the properties hold in a large number
	of randomly generated cases.  Specifications are expressed in
	Haskell, using combinators defined in the QuickCheck library.
	QuickCheck provides combinators to define properties, observe
	the distribution of test data, and define test
	data generators.


exposed-modules:
  Test.QuickCheck.Batch,
  Test.QuickCheck.Poly,
  Test.QuickCheck.Utils,
  Test.QuickCheck
