name:       containers
version:    0.3.0.0
options:    -fcpp -Isrc/data -papplicative
license:    BSD3
license-file:    LICENSE
maintainer:    libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29
synopsis:   Assorted concrete container types
category:   Data Structures
description:
        This package contains efficient general-purpose implementations
        of various basic immutable container types.  The declared cost of
        each operation is either worst-case or amortized, but remains
        valid even if structures are shared.
build-type: Simple
extra-source-files: include/Typeable.h
extensions: CPP

exposed-modules:
        Data.Graph
        Data.IntMap
        Data.IntSet
        Data.Map
        Data.Sequence
        Data.Set
        Data.Tree

