name:		parsec
version:	2.1.0.1
license:	BSD3
license-file:	LICENSE
author:		Daan Leijen <daan@cs.uu.nl>
maintainer:	Daan Leijen <daan@cs.uu.nl>
homepage:	http://www.cs.uu.nl/~daan/parsec.html
category:	Parsing
synopsis:	Monadic parser combinators
description:
    Parsec is designed from scratch as an industrial-strength parser
    library.  It is simple, safe, well documented (on the package
    homepage), has extensive libraries and good error messages,
    and is also fast.
exposed-modules:
    Text.ParserCombinators.Parsec.Error,
    Text.ParserCombinators.Parsec.Char,
    Text.ParserCombinators.Parsec.Combinator,
    Text.ParserCombinators.Parsec.Expr,
--    Text.ParserCombinators.Parsec.Perm,
    Text.ParserCombinators.Parsec.Pos,
    Text.ParserCombinators.Parsec.Prim,
    Text.ParserCombinators.Parsec
--  build-depends:	base
--  extensions:	ExistentialQuantification
--  if !impl(nhc98) {
--    extensions:	PolymorphicComponents
--    exposed-modules:
--      Text.ParserCombinators.Parsec.Language,
--      Text.ParserCombinators.Parsec.Token
--  }
--}
