Name:           safe
Build-Type:     Simple
Version:        0.2
License:        BSD3
License-File:   LICENSE
Copyright:      2007-8, Neil Mitchell
Maintainer:     ndmitchell@gmail.com
Author:         Neil Mitchell
Homepage:       http://www-users.cs.york.ac.uk/~ndm/safe/
Build-Depends:  haskell-extras
Category:       Unclassified
Synopsis:       Library for safe (pattern match free) functions
Description:
    Partial functions from the base library, such as @head@ and @!!@, modified
    to return more descriptive error messages, programmer defined error messages,
    @Maybe@ wrapped results and default values.

    These functions can be used to reduce the number of unsafe pattern matches in
    your code.
Exposed-modules:
        Safe
