Name:          smallcheck
Version:       0.4
Author:        Colin Runciman
Synopsis:      Another lightweight testing library in Haskell.
Description:   SmallCheck is similar to QuickCheck (Claessen and Hughes 2000-) but
               instead of testing for a sample of randomly generated values, SmallCheck
               tests properties for all the finitely many values up to some depth,
               progressively increasing the depth used.

Build-Depends: haskell98
Exposed-modules:    Test.SmallCheck
