Name: xhtml
Version: 3000.2.0.1
Copyright: Bjorn Bringert 2004-2006, Andy Gill, and the Oregon Graduate
           Institute of Science and Technology, 1999-2001
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
License: BSD3
License-file: LICENSE
build-depends: base
Extensions:
Synopsis: An XHTML combinator library
Description:
 This package provides combinators for producing
  XHTML 1.0, including the Strict, Transitional and Frameset variants.
Build-Type: Simple
Exposed-Modules:
  Text.XHtml,
  Text.XHtml.Frameset,
  Text.XHtml.Strict,
  Text.XHtml.Transitional,
  Text.XHtml.Debug,
  Text.XHtml.Table
Hidden-modules:
  Text.XHtml.Strict.Attributes,
  Text.XHtml.Strict.Elements,
  Text.XHtml.Frameset.Attributes,
  Text.XHtml.Frameset.Elements,
  Text.XHtml.Transitional.Attributes,
  Text.XHtml.Transitional.Elements,
  Text.XHtml.BlockTable,
  Text.XHtml.Extras,
  Text.XHtml.Internals
ghc-options: -O2 -W
