name:		haskell98
version:	1.0
license:	BSD3
license-file:	LICENSE
synopsis:	Compatibility with Haskell 98
homepage:	http://www.haskell.org/definition/
build-depends:	base
exposed-modules:
	-- Haskell 98 (Prelude and Numeric are re-exported)
	Prelude, Numeric, Array, CPUTime, Char, Complex, Directory, IO, Ix, List, Locale,
	Maybe, Monad, Random, Ratio, System, Time,
