Name: jhc
Version: 1.0
Extensions: ForeignFunctionInterface
Hidden-Modules:
    Jhc.Int,
    Jhc.Inst.Enum,
    Jhc.Inst.PrimEnum,
    Jhc.Inst.Read,
    Jhc.Inst.Show,
    Jhc.Inst.Storable

Exposed-Modules:
	Data.Char,
	Data.Int,
	Data.Ratio,
	Data.Word,
        Foreign.C.Error,
	Foreign.C.String,
	Foreign.C.Types,
	Foreign.Marshal.Alloc,
	Foreign.Marshal.Array,
	Foreign.Marshal.Utils,
	Foreign.Ptr,
	Foreign.Storable,
        Jhc.Addr,
        Jhc.Array,
	Jhc.Basics,
	Jhc.Enum,
	Jhc.Float,
        Jhc.Handle,
        Jhc.Hole,
        Jhc.IO,
        Jhc.JumpPoint,
        Jhc.List,
	Jhc.Maybe,
	Jhc.Monad,
	Jhc.Num,
	Jhc.Options,
	Jhc.Order,
	Jhc.Prim,
	Jhc.Show,
	Jhc.String,
	Jhc.Text.Read,
        Jhc.Tuples
	Jhc.Types,
	Numeric,
	Prelude,
	Prelude.CType,
	Prelude.Float,
	Prelude.IO,
	Prelude.IOError,
	Prelude.Text,
        System.IO.Unsafe
